<resources>
    <string name="app_name">Maths Game</string>

    <string name="addition">Addition</string>
    <string name="practice">Practice</string>
    <string name="timer">Timer</string>
    <string name="duel">Duel</string>
    <string name="hard">Hard</string>
    <string name="what_is">What is %1$d + %2$d?</string>
    <string name="what_is_sub">What is %1$d - %2$d?</string>
    <string name="what_is_mul">What is %1$d * %2$d?</string>
    <string name="you_ve_used_all_attempts_would_you_like_to_try_again">You\'ve used all %1$d attempts. Would you like to try again?</string>
    <string name="perfect_final_question_completed">🎉 Perfect! Final question completed!</string>
    <string name="correct_ready_for_next_question">✅ Correct! Ready for next question?</string>
    <string name="next_question">Next Question</string>
    <string name="show_results">Show Results</string>
    <string name="subtraction">Subtraction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/9214589741</string>

</resources>