<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_green_gradient"
    tools:context=".Second_opt_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:contentDescription="Back"
            android:padding="6dp"
            android:src="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bevietnampro_bold"
            android:text="@string/addition"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:letterSpacing="0.05" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/practice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg_green"
                    android:gravity="center"
                    android:padding="15dp"
                    android:elevation="6dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/pence"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/practice"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bevietnampro_semibold"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg_blue"
                    android:gravity="center"
                    android:padding="15dp"
                    android:elevation="6dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/stopwatch"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timer"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bevietnampro_semibold"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/duel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg_purple"
                    android:gravity="center"
                    android:padding="15dp"
                    android:elevation="6dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/vs"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duel"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bevietnampro_semibold"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/hard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:background="@drawable/card_bg_red"
                    android:gravity="center"
                    android:padding="15dp"
                    android:elevation="6dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/question"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bevietnampro_semibold"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/main_2" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
